fix: add overflow-x property to body

--- a/styles/common_styles.css
+++ b/styles/common_styles.css
@@ -54,7 +54,8 @@ body {
   font-weight: 400;
   color: #4c4c4c;
 
-  background-color: #ffffff;  
+  background-color: #ffffff;
+  overflow-x: hidden;
 }
 
 .lock {
